# api/gen/go/oas_response_encoders_gen.go
@@ -594,6 +594,19 @@ func encodeGetStatusResponse(response *SystemStatus, w http.ResponseWriter, span
 	return nil
 }
 
+func encodeGetUPSSettingsResponse(response *UPSSettings, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetUpdateStatusResponse(response *UpdateStatus, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
@@ -1249,6 +1262,19 @@ func encodeUpdateShareResponse(response *Share, w http.ResponseWriter, span trac
 }
 
 func encodeUpdateSharePermissionsResponse(response *SharePermissionsResult, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
+func encodeUpdateUPSSettingsResponse(response *UPSSettings, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
 
